[package]
name = "ip-repr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tantivy-bitpacker = "0.2"
structopt = "0.3"
itertools = "0.10.3"
fnv = "1.0.7"
q_compress = "0.10.0"
zstd = "0.11.2"

[lib]
name = "ip_repr"
path = "src/lib.rs"

[[bin]]
name = "test-ip-repr"
path = "src/main.rs"
